infrastructure/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: money-wizardry
  namespace: money-wizardry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: money-wizardry
  template:
    metadata:
      labels:
        app: money-wizardry
    spec:
      containers:
      - name: money-wizardry
        image: europe-west1-docker.pkg.dev/money-wizardry-prod/money-wizardry-repo/app:latest
        ports:
        - containerPort: 8000
        
        resources:
          requests:
            memory: "256Mi"
            cpu: "1000m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 120
          periodSeconds: 30
          failureThreshold: 5
        
        readinessProbe:
          httpGet:
            path: /ready
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 5
          timeoutSeconds: 5
          failureThreshold: 5
